--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /UltGameProt1/*
 
-!/UltGameProt1/ContentView.swift
-!/UltGameProt1/GameTurnView.swift
+!/UltGameProt1/.swift
 
 *.xcodeproj
 .DS_Store
